rust/template/ddlog_derive/tests/ui/fail/reject_unions.stderr
error: `Mutator` is not able to be automatically implemented on unions
 --> $DIR/reject_unions.rs:6:1
  |
6 | union Foo {
  | ^^^^^

error: `IntoRecord` is not able to be automatically implemented on unions
 --> $DIR/reject_unions.rs:6:1
  |
6 | union Foo {
  | ^^^^^

error: `FromRecord` is not able to be automatically implemented on unions
 --> $DIR/reject_unions.rs:6:1
  |
6 | union Foo {
  | ^^^^^
